# sprout

./: .dockerignore  .env.example  .gitignore  ACP.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.bench  NIP-OA.md  NIP-RS.md  NOSTR.md  PERSONA_PACK_SPEC.md  PERSONA_PACK_SPEC_V7.md  PR.md  README.md  RELEASING.md  SECURITY.md  TESTING.md  VISION.md  VISION_AGENT.md  VISION_PROJECTS.md  VISION_SOVEREIGN.md  deny.toml  docker-compose.yml  features.json  justfile  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pr293_crossfire_synthesis.md  prometheus.yml  renovate.json
.cargo/: config.toml
.github/: CODEOWNERS  zizmor.yml
GUIDES/: NOSTR_CLIENT_GUIDE.md
PLANS/: HUDDLES_IMPLEMENTATION.md
crates/git-sign-nostr/: Cargo.toml
crates/git-sign-nostr/src/: lib.rs  main.rs
crates/sprout-acp/: Cargo.toml  README.md  TESTING.md
crates/sprout-acp/src/: acp.rs  base_prompt.md  config.rs  filter.rs  lib.rs  main.rs  observer.rs  pool.rs  queue.rs  relay.rs  reply_context.rs
crates/sprout-acp/tests/: e2e_agent_responds.rs  stub_agent.sh
crates/sprout-agent/: Cargo.toml  README.md  VISION.md
crates/sprout-agent/src/: agent.rs  auth.rs  config.rs  doom_loop.rs  handoff.rs  hints.rs  lib.rs  llm.rs  log.rs  main.rs  mcp.rs  todo.rs  types.rs  wire.rs
crates/sprout-agent/src/config/: mod.rs
crates/sprout-agent/tests/: databricks_oauth.rs  fake_llm.rs  golden_transcripts.rs  hints_integration.rs  regressions.rs
crates/sprout-cli/: Cargo.toml  README.md  TESTING.md
crates/sprout-cli/src/: client.rs  error.rs  lib.rs  main.rs  validate.rs
crates/sprout-cli/src/commands/: auth.rs  channels.rs  dms.rs  emoji.rs  feed.rs  mem.rs  messages.rs  mod.rs  notes.rs  pack.rs  reactions.rs  repos.rs  social.rs  users.rs  workflows.rs
crates/sprout-dev-mcp/: Cargo.toml
crates/sprout-dev-mcp/src/: lib.rs  log.rs  main.rs  paths.rs  read_file.rs  rg.rs  shell.rs  shim.rs  str_replace.rs  todo.rs  tree.rs
crates/sprout-huddle/: Cargo.toml
crates/sprout-huddle/src/: error.rs  lib.rs  session.rs  token.rs  webhook.rs
crates/sprout-mcp/: Cargo.toml
crates/sprout-mcp/src/: lib.rs  main.rs  relay_client.rs  reply_context.rs  server.rs  toolsets.rs  upload.rs
crates/sprout-media/: Cargo.toml
crates/sprout-media/src/: auth.rs  config.rs  error.rs  lib.rs  storage.rs  thumbnail.rs  types.rs  upload.rs  validation.rs
crates/sprout-mobile/: Cargo.toml
crates/sprout-mobile/src/: converters.rs  error.rs  lib.rs
crates/sprout-mobile/src/auth/: keys.rs  mod.rs  nip42.rs  token.rs
crates/sprout-mobile/src/http/: channels.rs  feed.rs  messages.rs  mod.rs  search.rs  users.rs
crates/sprout-mobile/src/store/: channels.rs  messages.rs  mod.rs  profiles.rs
crates/sprout-mobile/src/ws/: mod.rs  protocol.rs  subscription.rs
crates/sprout-proxy/: Cargo.toml  README.md
crates/sprout-proxy/src/: channel_map.rs  error.rs  guest_store.rs  invite.rs  invite_store.rs  kind_translator.rs  lib.rs  main.rs  server.rs  shadow_keys.rs  translate.rs  upstream.rs
crates/sprout-relay-client/: Cargo.toml
crates/sprout-relay-client/src/: lib.rs
crates/sprout-test-client/: Cargo.toml
crates/sprout-test-client/src/: lib.rs  main.rs
crates/sprout-test-client/tests/: e2e_git.rs  e2e_long_form.rs  e2e_mcp.rs  e2e_media.rs  e2e_media_extended.rs  e2e_media_video.rs  e2e_nostr_interop.rs  e2e_persona.rs  e2e_relay.rs  e2e_rest_api.rs  e2e_tokens.rs  e2e_user_status.rs  e2e_workflows.rs
crates/sprout-test-client/tests/helpers/: mod.rs
crates/sprout-workflow/: Cargo.toml
crates/sprout-workflow/src/: action_sink.rs  error.rs  executor.rs  lib.rs  schema.rs
desktop/: .gitignore  README.md  RELEASING.md  biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  test-loader-hooks.mjs  vite.config.ts
desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.dev.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/examples/: pocket_bench.rs  pocket_onset_probe.rs  prod_probe.rs
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: app_state.rs  encrypted.rs  events.rs  file_watcher.rs  lib.rs  main.rs  media_proxy.rs  migration.rs  migration_team_dir_tests.rs  migration_tests.rs  models.rs  nostr_convert.rs  prevent_sleep.rs  relay.rs  util.rs  ws_relay.rs
desktop/src-tauri/src/commands/: agent_config.rs  agent_control.rs  agent_discovery.rs  agent_models.rs  agent_settings.rs  agents.rs  canvas.rs  channel_templates.rs  channels.rs  channels_tests.rs  dms.rs  engrams.rs  export_util.rs  identity.rs  media.rs  media_transcode.rs  mesh_llm.rs  messages.rs  mod.rs  pairing.rs  permissions.rs  persona_chat.rs  personas.rs  profile.rs  relay_members.rs  social.rs  teams.rs  tokens.rs  warp.rs  workflows.rs  workspace.rs
desktop/src-tauri/src/commands/agent_provider_settings/: commands.rs  commands_write.rs  mod.rs  spawn.rs  storage_profiles.rs  tests.rs  tests_profiles.rs  tests_spawn.rs
desktop/src-tauri/src/huddle/: agents.rs  audio_output.rs  jitter.rs  kokoro.rs  mod.rs  models.rs  pipeline.rs  playout.rs  pocket.rs  preprocessing.rs  relay_api.rs  state.rs  stt.rs  supertonic.rs  tts.rs  tts_tests.rs  ws_proxy.rs
desktop/src-tauri/src/managed_agents/: backend.rs  discovery.rs  env_vars.rs  fleet_update.rs  mod.rs  nest.rs  nest_agents.md  nest_skill.md  observer.rs  persona_avatars.rs  persona_card.rs  personas.rs  relay_mesh.rs  restore.rs  runtime.rs  storage.rs  team_repair.rs  teams.rs  types.rs
desktop/src-tauri/src/managed_agents/config_bridge/: claude.rs  codex.rs  goose.rs  mod.rs  reader.rs  types.rs  writer.rs
desktop/src-tauri/src/managed_agents/env_vars/: tests.rs
desktop/src-tauri/src/managed_agents/personas/: tests.rs
desktop/src-tauri/src/managed_agents/runtime/: tests.rs
desktop/src-tauri/src/mesh_llm/: coordinator.rs  mod.rs  offer.rs  preset.rs
desktop/src-tauri/src/templates/: storage.rs  types.rs
docs/: SPROUT_LITE_MODE.md  git-on-object-storage.md  mcp-threading.md  (+1 more)
(+1105 files in other folders)
