[package]
name = "sprout-acp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ACP harness that bridges Sprout events to AI agents"

[[bin]]
name = "sprout-acp"
path = "src/main.rs"

[dependencies]
# Internal
sprout-core = { workspace = true }

# Nostr
nostr = { workspace = true }

# Async runtime
tokio = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
futures-util = { workspace = true }

# HTTP (channel discovery REST API)
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# IDs
uuid = { workspace = true }
chrono = { workspace = true }

# URL parsing
url = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Config file
toml = "0.8"

# Filter expressions
evalexpr = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
