[package]
name = "sprout-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sprout-agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "process", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rmcp = { version = "1", default-features = false, features = ["client", "transport-child-process"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread", "macros", "io-std", "io-util", "sync", "process", "time", "net"] }
