[package]
name = "sprout-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sprout"
path = "src/main.rs"

[dependencies]
# CLI argument parsing — derive macros + env var support (SPROUT_API_TOKEN auto-wired)
clap = { version = "4", features = ["derive", "env"] }

# HTTP client — async REST calls to the relay
reqwest = { workspace = true, features = ["json"] }

# Async runtime — tokio macros + multi-thread for reqwest
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# Serialization — JSON body building and response passthrough
serde = { workspace = true }
serde_json = { workspace = true }

# Structured error types with exit code mapping
thiserror = { workspace = true }

# Nostr event signing — used in `sprout auth` and auto-mint (NIP-98 token minting)
nostr = { workspace = true }

# UUID parsing for validate_uuid
uuid = { version = "1" }

# Base64 encoding — NIP-98 event serialization for Authorization header
base64 = "0.22"

# SHA-256 — NIP-98 payload hash tag
sha2 = "0.10"
