[package]
name = "sprout-dev-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "sprout-dev-mcp"
path = "src/main.rs"

[dependencies]
sprout-cli = { path = "../sprout-cli" }
git-credential-nostr = { path = "../git-credential-nostr" }
git-sign-nostr = { path = "../git-sign-nostr" }
nostr = { workspace = true }
zeroize = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
similar = "2"
tempfile = "3"
ignore = "0.4.25"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", default-features = false, features = ["signal", "process"] }
