[package]
name = "sprout-huddle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "LiveKit audio/video integration for Sprout"

[dependencies]
sprout-core = { workspace = true }
nostr       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
jsonwebtoken = { workspace = true }
hmac        = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
