[package]
name = "sprout-huddle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "LiveKit audio/video integration for Sprout"

[dependencies]
sprout-core = { workspace = true }
nostr       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
jsonwebtoken = { workspace = true }
hmac        = { workspace = true, optional = true }
sha2        = { workspace = true, optional = true }
hex         = { workspace = true, optional = true }

[features]
default = []
webhook = ["hmac", "sha2", "hex"]
