[package]
name = "sprout-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server providing AI agent tools for Sprout"

[[bin]]
name = "sprout-mcp-server"
path = "src/main.rs"

[dependencies]
# Sprout core types
sprout-core = { workspace = true, features = ["mcp-schema"] }

# MCP SDK
rmcp = { workspace = true }
schemars = { workspace = true }

# Nostr (for auth + event building)
nostr = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client (for relay REST API calls)
reqwest = { workspace = true }

# Utilities
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
