[package]
name = "sprout"
version = "0.1.0"
description = "Sprout desktop app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sprout_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-websocket = "2"
tauri-plugin-dialog = "2"
infer = "0.16"
hex = "0.4"
tokio = { version = "1", features = ["fs", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nostr = "0.37"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
sprout-core = { path = "../../crates/sprout-core" }
base64 = "0.22"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-notification = "2.3.3"
